# haskell-modbus

./: haskell-modbus.cabal  stack.yaml
Data/: ModbusTcp.hs
Data/Modbus/: Rtu.hs  Tcp.hs
test/Data/: ModbusTcpSpec.hs
